--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+   "postinstall": "prisma generate"
   },
   "prisma": {
     "seed": "tsx --require dotenv/config scripts/seed.ts"
@@ -16,12 +17,12 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "7.0.0",
-    "@typescript-eslint/parser": "7.0.0",
-    "eslint": "9.24.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.56.0",
     "eslint-config-next": "15.3.0",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-react-hooks": "4.6.0",
-    "postcss": "8.4.30",
+    "postcss": "^8.5.6",
     "prisma": "6.7.0",
     "tailwind-merge": "2.5.2",
     "tailwindcss": "3.3.3",
@@ -91,15 +92,15 @@
     "lodash": "4.17.21",
     "lucide-react": "0.446.0",
     "mapbox-gl": "1.13.3",
-    "next": "14.2.28",
-    "next-auth": "4.24.11",
+    "next": "^16.1.1",
+    "next-auth": "^4.24.13",
     "next-themes": "0.3.0",
     "plotly.js": "2.35.3",
-    "react": "18.2.0",
+    "react": "^19.2.3",
     "react-chartjs-2": "5.3.0",
     "react-datepicker": "6.1.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^19.2.3",
     "react-hook-form": "7.53.0",
     "react-hot-toast": "2.4.1",
     "react-intersection-observer": "9.8.0",
