--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@aws-sdk/client-s3": "^3.0.0",
     "@aws-sdk/s3-request-presigner": "^3.0.0",
     "@floating-ui/react": "0.26.0",
-    "@headlessui/react": "1.7.18",
+    "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "3.9.0",
     "@next-auth/prisma-adapter": "1.0.7",
     "@prisma/client": "6.7.0",
@@ -66,7 +66,7 @@
     "@radix-ui/react-toggle": "1.1.0",
     "@radix-ui/react-toggle-group": "1.1.0",
     "@radix-ui/react-tooltip": "1.1.2",
-    "@tanstack/react-query": "5.0.0",
+    "@tanstack/react-query": "^5.62.0",
     "@types/bcryptjs": "2.4.6",
     "@types/jsonwebtoken": "9.0.5",
     "@types/plotly.js": "2.35.5",
