--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-   "postinstall": "prisma generate"
+    "postinstall": "prisma generate"
   },
   "prisma": {
     "seed": "tsx --require dotenv/config scripts/seed.ts"
@@ -76,7 +76,7 @@
     "chart.js": "4.4.9",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
-    "cmdk": "1.0.0",
+    "cmdk": "^1.0.4",
     "cookie": "1.0.2",
     "csv": "6.3.11",
     "date-fns": "3.6.0",
