--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@next/swc-wasm-nodejs": "13.5.1",
     "@types/node": "20.6.2",
+    "@types/pg": "^8.16.0",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "7.0.0",
@@ -23,7 +24,7 @@
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-react-hooks": "4.6.0",
     "postcss": "^8.5.6",
-    "prisma": "^5.22.0",
+    "prisma": "^7.3.0",
     "tailwind-merge": "2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "1.0.7",
@@ -38,7 +39,8 @@
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "3.9.0",
     "@next-auth/prisma-adapter": "1.0.7",
-    "@prisma/client": "^5.22.0",
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "@radix-ui/react-accordion": "1.2.0",
     "@radix-ui/react-alert-dialog": "1.1.1",
     "@radix-ui/react-aspect-ratio": "1.1.0",
@@ -96,6 +98,7 @@
     "next": "^16.1.1",
     "next-auth": "^4.24.13",
     "next-themes": "0.3.0",
+    "pg": "^8.17.2",
     "plotly.js": "2.35.3",
     "react": "^19.2.3",
     "react-chartjs-2": "5.3.0",
